--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8">
+    <title>Venkata SPR Paluri Homepage</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <header>
+        <h1>Welcome to My GitHub Page</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#section1">Section 1</a></li>
+            <li><a href="#section2">Section 2</a></li>
+            <!-- Add more navigation links as needed -->
+        </ul>
+    </nav>
+    <main>
+        <section id="section1">
+            <h2>Section 1</h2>
+            <p>This is the first section of my homepage.</p>
+        </section>
+        <section id="section2">
+            <h2>Section 2</h2>
+            <p>This is the second section of my homepage.</p>
+        </section>
+        <!-- Add more sections as needed -->
+    </main>
+    <footer>
+        <p>&copy; 2023 Venkata SPR Paluri</p>
+    </footer>
 </body>
 </html>
