--- a/index.html
+++ b/index.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Venkata SPR Paluri Homepage</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Profile</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+    <style>
+        /* Inline CSS for simple styling (you can move these styles to your CSS file) */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+
+        .profile-container {
+            max-width: 600px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            border-radius: 5px;
+        }
+
+        .profile-picture {
+            max-width: 100px;
+            border-radius: 50%;
+        }
+
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My GitHub Page</h1>
-    </header>
-    <nav>
+    <div class="profile-container">
+        <img src="profile.jpg" alt="Your Profile Picture" class="profile-picture">
+        <h1>Venkata SPR Paluri</h1>
+        <p>Cloud Engineer / Data Scientist / Hyperion Tools like EDMCS, DRM, OICS, EPM Developer</p>
+
+        <h2>About Me</h2>
+        <p>
+		Technical Lead on Hyperion DRM/EDMCS, OICS, FDMEE Along with well experianced and trained in Data Science and GCP/AWS/Oracle Cloud Trained
+        </p>
+
+        <h2>Contact Information</h2>
         <ul>
-            <li><a href="#section1">Section 1</a></li>
-            <li><a href="#section2">Section 2</a></li>
-            <!-- Add more navigation links as needed -->
+            <li>Email: <a href="mailto:pvsprasadreddy@gmail.com">pvsprasadreddy@gmail.com</a></li>
+            <li>GitHub: <a href="https://github.com/pvsprasadreddy">github.com/pvsprasadreddy</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/venkata-spr-paluri-78a42a37/">linkedin.com/in/venkata-spr-paluri</a></li>
         </ul>
-    </nav>
-    <main>
-        <section id="section1">
-            <h2>Section 1</h2>
-            <p>This is the first section of my homepage.</p>
-        </section>
-        <section id="section2">
-            <h2>Section 2</h2>
-            <p>This is the second section of my homepage.</p>
-        </section>
-        <!-- Add more sections as needed -->
-    </main>
-    <footer>
-        <p>&copy; 2023 Venkata SPR Paluri</p>
-    </footer>
+    </div>
 </body>
 </html>
